--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     </div>
     <div class="center">
         <button id="start">Start Puzzle</button>
+        <p>Wins: <span id="yourWins">0</span></p>
+        <p><span id="winOrLose"></span></p>
     </div>
 </body>
 </html>
