guess tracker patch

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </div>
     <div class="center">
         <button id="start">Start Puzzle</button>
-        <p>Wins: <span id="yourWins">0</span></p>
+        <p>Guesses:<span id='yourGuess'></span></p>
+        <p>Total Attempts: <span id="yourTries">0</span></p>
         <p>Level: <span id="yourLevel">1</span></p>
         <p><span id="winOrLose"></span></p>
     </div>
