--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<title>LIGHTS!</title>
 </head>
 <body> 
-	<!-- <video autoplay loop muted poster id='background'>
+	<video autoplay loop muted poster id='background'>
 		<source src="images/movie.mp4" type='video/mp4'>
-	</video> -->
+	</video>
     <h1>Press the buttons back in the order you see!</h1>
     <div class="container center">
            		<button class='button' id='b0' value='0'></button>
