--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<button class='button' id='b2' value='2'></button>
 				<button class='button' id='b3' value='3'></button>
     </div>
-    <div class="center">
+    <div class="center clear">
         <button id="start">Start Puzzle</button>
         <p>Guesses:<span id='yourGuess'></span></p>
         <p>Total Attempts: <span id="yourTries">0</span></p>
